--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "flaskapp\\Scripts\\python.exe",
+    "python.pythonPath": "env\\Scripts\\python.exe",
     "python.formatting.provider": "yapf"
 }
